# docs/openapi.yaml
@@ -82,8 +82,6 @@ paths:
                     type: array
                     items:
                       $ref: "#/components/schemas/Playlist"
-
-  /users/{userId}/playlists/{playlistTitle}:
     post:
       summary: Create new playlist
       parameters:
@@ -92,11 +90,16 @@ paths:
           required: true
           schema:
             type: string
-        - name: playlistTitle
-          in: path
-          required: true
-          schema:
-            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                playlistTitle:
+                  type: string
+                  example: playlist!
       responses:
         201:
           description: success response containing info of new playlist
@@ -104,6 +107,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Playlist"
+
+  /users/{userId}/playlists/{playlistTitle}:
     get:
       summary: Get playlist from userId and playlistTitle
       parameters:
@@ -128,7 +133,7 @@ paths:
                   playlist:
                     $ref: "#/components/schemas/Playlist"
 
-  /users/{userId}/playlists/{playlistTitle}/videos/{videoId}:
+  /users/{userId}/playlists/{playlistTitle}/videos:
     post:
       summary: Add new video to an already existing playlist
       parameters:
@@ -142,11 +147,16 @@ paths:
           required: true
           schema:
             type: string
-        - name: videoId
-          in: path
-          required: true
-          schema:
-            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                videoId:
+                  type: string
+                  example: DHGOI"%$&KMSSM
       responses:
         201:
           description: success response containing a message that the new video has been added
